# bunood_realestate

./: .gitattributes  .gitignore  README.md  license.txt  pyproject.toml
bunood_realestate/: hooks.py  modules.txt  portal.py
bunood_realestate/bunood_core/doctype/charge/: charge.json  charge.py
bunood_realestate/bunood_core/doctype/charge_type/: charge_type.json  charge_type.py
bunood_realestate/core/: charge.py  notify.py
bunood_realestate/fixtures/: accounting_dimension.json  charge_type.json  re_business_type.json  re_contract_kind.json  re_maintenance_category.json  re_management_model.json  re_ownership_type.json  re_property_type.json  re_revenue_model.json
bunood_realestate/real_estate/: collections.py  deposits.py  events.py  gl_utils.py  head_lease.py  management.py  re_dashboard.py  tasks.py
bunood_realestate/real_estate/doctype/collection_notification/: collection_notification.json  collection_notification.py
bunood_realestate/real_estate/doctype/head_lease_schedule/: head_lease_schedule.json  head_lease_schedule.py
bunood_realestate/real_estate/doctype/land/: land.json  land.py
bunood_realestate/real_estate/doctype/land_contract/: land_contract.json  land_contract.py
bunood_realestate/real_estate/doctype/land_expense/: land_expense.json  land_expense.py
bunood_realestate/real_estate/doctype/land_revenue/: land_revenue.json  land_revenue.py  test_land_revenue.py
bunood_realestate/real_estate/doctype/lease_contract/: lease_contract.js  (+3 more)
bunood_realestate/translations/: ar.csv
bunood_realestate/www/tenant/: index.html  index.py
(+73 files in other folders)
