[project]
name = "bunood_realestate"
authors = [
    { name = "Bunood", email = "info@bunood.example" },
]
description = "Real estate & leasing management, natively integrated with ERPNext accounting"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Runtime deps only. frappe & erpnext are provided by the bench, never pip-installed here.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Tells bench which framework line this app targets (Bunood runs ERPNext v16).
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
